# piln

./: .gitignore  LICENSE  Makefile  database.go  handlers.go  helpers.go  ipfs.go  lightning.go  main.go  package.json  package.yaml  piln.cabal  postgres.sql  tasks.go
app/: Database.hs  Lightning.hs
client/: 680.patch  AddPin.js  Main.js  NotPinnedObject.js  PaidWaiting.js  PinnedObject.js  Portal.js  app.nix  default.nix  helpers.js  orderStore.js  package.json  piln-client.cabal  shell.drv  stack.yaml  style.styl
client/client/: Main.hs
server/: .ghc.environment.x86_64-linux-8.4.3  app.nix  default.nix  piln.cabal  postgres.sql  shell.drv  stack.yaml
server/app/: Database.hs  IPFS.hs  Main.hs
server/server/: Database.hs  IPFS.hs  Lightning.hs
server/static/: all.js  index.html  lib.js  out.frefs.js  out.js  rts.js  runmain.js  style.css
static/: index.html  privacy.txt  terms.txt
